--- a/angular.json
+++ b/angular.json
@@ -59,6 +59,11 @@
                 "input": "src/themes/dspace/styles/theme.scss",
                 "inject": false,
                 "bundleName": "dspace-theme"
+              },
+              {
+                "input": "src/themes/rice/styles/theme.scss",
+                "inject": false,
+                "bundleName": "rice-theme"
               }
             ],
             "scripts": [],
