--- a/config/config.development.yaml
+++ b/config/config.development.yaml
@@ -317,3 +317,11 @@ info:
 markdown:
   enabled: true
   mathjax: true
+
+# Which vocabularies should be used for which search filters
+# and whether to show the filter in the search sidebar
+# Take a look at the filter-vocabulary-config.ts file for documentation on how the options are obtained
+vocabularies:
+  - filter: 'subject'
+    vocabulary: 'srsc'
+    enabled: true
