--- a/src/assets/i18n/en.json5
+++ b/src/assets/i18n/en.json5
@@ -2816,7 +2816,7 @@
 
   "menu.section.browse_community_by_title": "By Title",
 
-  "menu.section.browse_global": "All of DSpace",
+  "menu.section.browse_global": "Browse",
 
   "menu.section.browse_global_by_author": "By Author",
 
