--- a/config/config.yml
+++ b/config/config.yml
@@ -259,19 +259,19 @@ themes:
           rel: icon
           href: assets/rice/images/favicons/Rice-R.ico
           sizes: any
-      - tagName: link
-        attributes:
-          rel: icon
-          href: assets/rice/images/favicons/favicon.svg
-          type: image/svg+xml
-      - tagName: link
-        attributes:
-          rel: apple-touch-icon
-          href: assets/rice/images/favicons/apple-touch-icon.png
-      - tagName: link
-        attributes:
-          rel: manifest
-          href: assets/rice/images/favicons/manifest.webmanifest
+#      - tagName: link
+#        attributes:
+#          rel: icon
+#          href: assets/rice/images/favicons/favicon.svg
+#          type: image/svg+xml
+#      - tagName: link
+#        attributes:
+#          rel: apple-touch-icon
+#          href: assets/rice/images/favicons/apple-touch-icon.png
+#      - tagName: link
+#        attributes:
+#          rel: manifest
+#          href: assets/rice/images/favicons/manifest.webmanifest
 
 # The default bundles that should always be displayed as suggestions when you upload a new bundle
 bundle:
