remove open access tag

--- a/src/assets/i18n/en.json5
+++ b/src/assets/i18n/en.json5
@@ -38,7 +38,7 @@
 
   "access-status.metadata.only.listelement.badge": "Metadata only",
 
-  "access-status.open.access.listelement.badge": "Open Access",
+  "access-status.open.access.listelement.badge": "",
 
   "access-status.restricted.listelement.badge": "Restricted",
 
